# twitch-wiz-light-control

./: .gitmodules  CMakeLists.txt  Main.qml  main.cpp  o2twitch.cpp  o2twitch.h  wizcontroller.cpp  wizcontroller.h
